# strix-protocol

./: .gitignore  LICENSE  README.md  docker-compose.yml
contracts/: Cargo.toml
contracts/integration-tests/: Cargo.toml
contracts/integration-tests/src/: lib.rs
contracts/integration-tests/test_snapshots/tests/: test_full_flow_call_itm.1.json  test_full_flow_put_otm.1.json  test_lp_withdraw_during_active_options.1.json  test_multiple_lps_share_split.1.json  test_multiple_positions_mixed_outcomes.1.json  test_pause_blocks_buying.1.json  test_share_price_reflects_pnl.1.json  test_vault_capacity_limit.1.json
contracts/mock-oracle/: Cargo.toml
contracts/mock-oracle/src/: lib.rs
contracts/mock-oracle/test_snapshots/test/: test_any_asset_returns_xlm_price.1.json  test_any_key_returns_price.1.json  test_double_initialize_fails.1.json  test_initialize_and_get_value.1.json  test_initialize_and_lastprice.1.json  test_price_7dec_conversion.1.json  test_set_price.1.json
contracts/mock-usdc/: Cargo.toml
contracts/mock-usdc/src/: lib.rs
contracts/option-market/: Cargo.toml
contracts/option-market/src/: lib.rs  settlement.rs  test.rs  types.rs
contracts/option-market/test_snapshots/test/: test_buy_call_rejects_strike_not_in_epoch.1.json  test_buy_call_success.1.json  test_buy_put_success.1.json  test_claim_itm_marks_claimed.1.json  (+28 more)
contracts/pricing-engine/: Cargo.toml
contracts/pricing-engine/src/: black_scholes.rs  lib.rs  oracle.rs  test.rs
contracts/underwriting-vault/: Cargo.toml
contracts/underwriting-vault/src/: lib.rs  test.rs  types.rs
(+141 files in other folders)
