[workspace]
members = [
    "pricing-engine",
    "underwriting-vault",
    "option-market",
    "integration-tests",
    "mock-oracle",
    "mock-usdc",
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.7.6", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
